--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@ body {
   font-family: Arial;
   background: #faf7f2;
   margin: 0;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   padding: 20px;
 }
 
